# collabstr-brief-generator

./: .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  manage.py  pyproject.toml  render.yaml  requirements.md
brief/: apps.py  models.py  ratelimit.py  schemas.py  views.py
brief/migrations/: 0001_initial.py
brief/services/: guardrails.py  llm.py  observability.py  providers.py  telemetry.py
brief/static/brief/css/: base.css  components.css  pages.css  styles.css  tokens.css
brief/static/brief/js/: app.js
brief/templates/: base.html
brief/templates/brief/: index.html  styleguide.html
brief/templates/components/: field.html  footer.html  topbar.html
brief/tests/: test_eval.py  test_guardrails.py  test_llm.py  test_providers.py  test_ratelimit.py  test_schemas.py  test_telemetry.py  test_views.py
briefgen/: settings.py  settings_test.py  urls.py  wsgi.py
