[project]
name = "collabstr-brief-generator"
version = "0.1.0"
description = "AI Brief Generator — Django + jQuery campaign brief tool for Collabstr."
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<5.2",
    "pydantic>=2,<3",
    "openai>=2,<3",
    "anthropic>=0.34,<1",
    "python-dotenv>=1.0,<2",
    "whitenoise>=6,<7",
    "gunicorn>=23,<27",
]

[dependency-groups]
dev = [
    "ruff>=0.6,<0.16",
    "pre-commit>=4,<5",
]

[tool.uv]
# This is an application, not an installable package — don't try to build it.
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]  # import sorting
